# pas-mri-extractor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BENCHMARK.md  DEPLOYMENT.md  Dockerfile.streamlit  GOLD_LABELING.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_single.py
app/: components.py  config_studio.py  examples.py  llm_risk_helpers.py  provenance.py  state.py  streamlit_app.py
configs/: benchmark_pas20.yaml  eval_dummy.yaml  eval_qwen.yaml  models.yaml  prompt.yaml  risk_score.yaml  rules.yaml  stages.example.yaml
configs/prompts/: case_chat.example.yaml  clinical_summary.example.yaml  extractor.yaml  risk_prediction.example.yaml  (+3 more)
examples/: sample_mri.txt
notebooks/: 01_example_runs.ipynb  3_0.ipynb
scripts/: benchmark_utils.py  build_error_review.py  build_gold_dataset.py  build_presentation_reports.py  build_report.py  compare_baseline.py  compare_modes.py  error_analysis.py  evaluate.py  evaluate_llm_risk.py  evaluate_predictions.py  export_excel_dataset.py  normalize_predictions.py  presentation_metrics.py  run_benchmark.py  run_full_dataset_pipeline.py
tests/: test_error_analysis.py  test_evaluate_llm_risk.py  test_json_retry.py  test_llm_risk_prediction_stage.py  test_llm_risk_ui_helpers.py  test_model_config.py  test_prompt_evidence_contract.py  test_prompt_registry.py  test_provenance.py  test_rules_negation.py  test_rules_previous_cs_count.py  test_rules_sample_regression.py  test_run_full_dataset_pipeline.py  test_schema_contract.py  test_scoring_config.py  test_stages.py  test_streamlit_examples_regression.py
(+22 files in other folders)
